--- a/views/register.html
+++ b/views/register.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <script src="https://kit.fontawesome.com/e8df24fbbe.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles-seba.css">   
+    <link rel="stylesheet" href="/css/styles-prueba.css">   
 </head>
 <body>
     <header class="main-header">
@@ -89,33 +89,59 @@
     </main>
 
     <footer>
-        <ul class="nosotros">
-        <li><a href="/" class="home"><img src="/images/kicks.png" alt="logo kicks" class="logo-footer"></a></li>
-        <li><a href="#">Quiénes Somos</a></li>
-        <li><a href="#">Preguntas Frecuentes</a></li>
-        <li><a href="#">Sucursales</a></li>
-        <li><a href="#">Formas de pago</a></li>
-        <li><a href="#">Términos y condiciones</a></li>
-        <li><a href="#">Políticas de cambios</a></li>  
-       </ul>
-           
-           
-       <div class="contacto">
-           <img src="/images/qr-kicks.png" alt="qr-contacto" class="qr">
-           <div>CONTACTANOS</div>
-        </div>
-       
-           <form action="/register" method="GET" class="form-suscripcion">
-               <label for="suscripcion">SUSCRIBITE</label>
-               <input type="email" name="email" id="suscripcion" placeholder="nombre@email.com">
-               <div class="redes">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-pinterest-square"></i>
+
+        <section>
+
+            <div class="main-footer">
+                <article class="footer-article">
+                    <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none2"></i></h4>
+                    <div class="italic center gris-oscuro padding">
+                        <ul class="footer">
+                            <li><a href="#" class="linkfooter">Quienes somos</a></li>
+                            <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
+                            <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="footer-article">
+                    <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none2"></i></h4>
+                    <div class="italic center gris-oscuro padding">
+                        <ul class="footer">
+                            <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
+                            <li><a href="#" class="linkfooter">Sucursales</a></li>
+                            <li><a href="#" class="linkfooter">Pagos</a></li>
+                            <li><a href="#" class="linkfooter">Entregas</a></li>
+                            <li><a href="#" class="linkfooter">Cambios</a></li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="footer-article">
+                    <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none2"></i></h4>
+                    <div class="italic">
+                        <ul class="footer">
+                            <li><a href="" class="linkfooter">0800-888-8888</a></li>
+                            <li><a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
+                            <li><a href="#" class="linkfooter"><i class="far fa-envelope "></i>Envianos un mensaje</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
             </div>
-           </form>
-   </footer>
-    
+
+            <br />
+
+            <div>
+                <p class="gris-oscuro font-size center1 ">Copyright © 2020 KICKS S.R.L.</p>
+                <div class="redes">
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-instagram-square"></i>
+                    <i class="fab fa-whatsapp-square"></i>
+                </div>
+            </div>
+        </section>
+
+    </footer>
+
     
 </body>
 </html>
