--- a/public/css/styles-seba.css
+++ b/public/css/styles-seba.css
@@ -113,7 +113,7 @@ body{
     font-size: 12px;
 }
 
-/*estilos main*/
+/*estilos main carrito*/
 .encabezado-carrito{
     display: flex;
     flex-wrap: wrap;
@@ -276,7 +276,7 @@ hr {
 .a2 , .a3 , .a4{
     display: none;
 }
-
+/*--------------fin main carrito---------------------*/
 /*footer*/
 
 footer{
@@ -343,7 +343,7 @@ footer a{
     
 }
 
-/*registro*/
+/* Estilos Main Register*/
 .titulo-registro{
     text-align: center;
     padding:10px 10px 0px 10px;
@@ -396,6 +396,7 @@ width: 80%;
     width: 30%;
     margin:auto;
 }
+/*---------------------fin estilos main register--------*/
 .arriba{
     background-color: #f2e4bb;
     text-align: center;
@@ -447,6 +448,7 @@ Descuentos: 16px
 /*Media querys*/
 
 @media (min-width:478px){
+    /*media querys carrito*/
 hr{
     width:25%;
 }
@@ -466,7 +468,7 @@ hr{
 .izarrow , .derarrow{
     display: none;
 }
-
+/*-----fin media querys carrito*/
 }
 
 
