--- a/views/productCart.html
+++ b/views/productCart.html
@@ -50,7 +50,7 @@
             <article class="producto">
                 <img src="/images/new-balance3.png" alt="NEW BALANCE 997" class="miniatura">
                 <div class="modelo">NEW BALANCE 997 SPORT CHINESE N.Y / TALLE 36</div>
-                <div class="precio">PRECIO $15.799</div>
+                <div class="precio-carrito">PRECIO $15.799</div>
                 <form action="/productCart" method="GET" class="form-cantidad">
                     <label for="cantidad">u.</label>
                     <select name="cantidad" id="cantidad">
@@ -60,7 +60,7 @@
                         <option value="4">4</option>
                     </select>
                     </form>
-                    <div class="precio">TOTAL $15.799</div>
+                    <div class="precio-carrito">TOTAL $15.799</div>
                     <div class="eliminar">
                         <i class="far fa-times-circle boton-eliminar"></i> 
                     </div>
@@ -68,7 +68,7 @@
             <article class="producto">
                 <img src="/images/vans1.png" alt="vans old skool" class="miniatura">
                 <div class="modelo">VANS OLD SKOOL BLACK WHITE / TALLE 40</div>
-                <div class="precio">PRECIO $11.200</div>
+                <div class="precio-carrito">PRECIO $11.200</div>
                 <form action="/productCart" method="GET" class="form-cantidad">
                     <label for="cantidad">u.</label>
                     <select name="cantidad" id="cantidad">
@@ -78,7 +78,7 @@
                         <option value="4">4</option>
                     </select>
                     </form>
-                    <div class="precio">TOTAL $11.200</div>
+                    <div class="precio-carrito">TOTAL $11.200</div>
                     <div class="eliminar">
                         <i class="far fa-times-circle boton-eliminar"></i> 
                     </div>
