--- a/public/css/styles-prueba.css
+++ b/public/css/styles-prueba.css
@@ -658,7 +658,7 @@ img{
     text-align: center;
 }
 
-.precio{
+.precio-pd{
     font-size: 35px;
     font-weight: bold;
     color: #8c2e2e;
@@ -865,7 +865,7 @@ hr{
         background-color: #222021;
     }
 
-    .precio{
+    .precio-pd{
         font-size: 50px;
         font-weight: bold;
         color: #8c2e2e;
