--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -64,7 +64,7 @@
             <div class="data-principal">
                 <div class="product-body">
                     <h2 class="main-title">Adidas Ozweego Orange (Youth)</h2>
-                    <p class="precio">$13.999</p>
+                    <p class="precio-pd">$13.999</p>
                     <h3 class="talle">Elegi tu talle</h3>
                 <div class="Talle">
                     <p class="guia-talles"><a href=# class="cfont-talles"><i class="fas fa-ruler-horizontal"></i>Guia de talles</a></p>
