--- a/views/productCart.html
+++ b/views/productCart.html
@@ -111,7 +111,7 @@
                 <div class="contenedor-descripcion">
                     <div >PUMA FUTURE RIDER NES (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio" >$ 22.000</div>
+                    <div class="precio-carrito" >$ 22.000</div>
                     <i class="fas fa-arrow-circle-right derarrow"></i>
                 </div>
             </article>
@@ -120,7 +120,7 @@
                 <div class="contenedor-descripcion">
                     <div >ADIDAS OZWEEGO ORANGE (YOUTH)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio" >$ 21.700</div>
+                    <div class="precio-carrito" >$ 21.700</div>
                     <i class="fas fa-arrow-circle-right derarrow"></i>
                 </div>
             </article>
@@ -129,7 +129,7 @@
                 <div class="contenedor-descripcion">
                     <div >NIKE AIR MAX 90 INFRARED (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio" >$ 21.700</div>
+                    <div class="precio-carrito" >$ 21.700</div>
                     <i class="fas fa-arrow-circle-right derarrow"></i>
                 </div>
             </article>
@@ -138,7 +138,7 @@
                 <div class="contenedor-descripcion">
                     <div >NIKE AIR MAX 90 INFRARED (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio" >$ 21.700</div>
+                    <div class="precio-carrito" >$ 21.700</div>
                     <i class="fas fa-arrow-circle-right derarrow"></i>
                 </div>
             </article>
