--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,7 +129,7 @@ section.banner img{
     align-self: center;
 }
 
-/*MAIN */
+/*MAIN INDEX */
 h2 {
     font: 25px sans-serif;
     margin-top: 25px;
@@ -166,6 +166,9 @@ h2.linea span {
 .recomendado-article img{
     width: 100%;
 }
+article.recomendado-article{
+    background-color: #ffffff;
+}
 .contenedor-descripcion{
     display: flex;
     flex-wrap: wrap;
@@ -174,7 +177,7 @@ h2.linea span {
     margin-top: 20px;
     background-color: #f2efe7;
 }
-contenedor-descripcion div{
+.contenedor-descripcion div{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -287,6 +290,320 @@ div.medios-pago{
     width: 100%;
     margin-top: 2px;    
 }
+.destacados{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+/*MAIN LOGIN */
+.titulo-registro{
+    font-family: 'Roboto';
+    font-weight: bold;
+    padding-bottom: 10px;
+    border-bottom: solid 1px #000000;
+    margin-bottom: 15px;
+}
+.obligatorio{
+    padding-top: 10px;
+    padding-left: 5px;
+    font-style: italic;
+    font-size: 14px;
+}
+.register-formulario{
+    margin-bottom: 15px;
+    padding: 10px 10px 0 10px;
+}
+.register-formulario label{
+    margin-bottom: 5px;
+    font-style: italic;
+    display: block;
+}
+.re-password{
+    color: #000000;
+    font-size: 17px;
+    padding: 7px 20px;
+    font-family: "Roboto";
+    text-decoration: underline;
+    text-align: center;
+}
+.boton-login{
+    background-color: #222021;
+    border: none;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+.new-account{
+    margin-top: 15px;
+    padding-bottom: 10px;
+    border-bottom: solid 1px black;
+}
+.re-size{
+    font-size: 12px;
+}
+.submit-button{
+    margin-top: 10px;
+    width: 30%;
+    background-color: #222021;
+    border: none;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+/*MAIN PRODUCTCART */
+
+.encabezado-carrito{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-top: 20px;
+}
+.encabezado-carrito a{
+    font-size: 10px;
+    align-self: center;
+    text-decoration: none;
+    margin-left: 15px;
+}
+.titulos{
+    display: none;
+}
+.producto{
+    display: flex;
+    flex-wrap: wrap;
+    border-top: solid 2px black;
+    margin-top: 10px;
+    padding: 5px;
+}
+.miniatura{
+    width: 30%;
+}
+.modelo{
+    font-size: 12px;
+    width: 60%;
+    align-self: center;
+}
+.precio-carrito{
+    font-size: 18px;
+    width: 70%;
+    display: flex;
+    justify-content: flex-end;
+}
+.contenedor-descripcion div.precio-carrito{
+    width: 80%;
+}
+.form-cantidad{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+.eliminar{
+    display: flex;
+    width: 90%;
+    justify-content: flex-end;
+}
+.boton-eliminar{
+    display: flex;
+    width: 25px;
+    justify-content: center;
+    font-size: 18px;
+}
+.finalizar-compra{
+    display: flex;
+    flex-wrap: wrap;
+    border-top: solid 2px black;
+    margin-top: 10px;
+    padding: 5px;
+    justify-content: space-around;
+    padding-top: 15px;
+}
+.finalizar-form{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+.finalizar-form label{
+    padding:15px;
+    font-weight: bold;
+}
+.boton-compra{
+    font-family: roboto;
+    background-color:#d97f11;
+    padding:0px 10px;
+    border:none;
+    border-radius: 5px;
+    width: 140px;
+    height: 40px;
+    color: white;
+}
+
+/*MAIN PRODUCTDETAIL */
+
+.nav-site{
+    display:flex;
+}
+
+.nav-site li a{
+    text-decoration: none;
+    font-weight: bold;
+    color:  #000000;
+}
+.main-article-product{
+    margin: 0px 50px;
+    background-color: #f2f2f2;  
+    border: solid 0.5px #000000;
+}
+.data-principal{
+    background-color: #222021;
+    text-align: center;
+}
+.main-title{
+    font-weight: bolder;
+    color: #ffffff;
+}
+.precio-pd{
+    font-size: 35px;
+    font-weight: bold;
+    color: #8c2e2e;
+    margin: 10px;
+}
+.talle{
+    color: #ffffff;
+}
+.cfont-talles{
+    color: #ffffff;
+}
+.tallesdisponibles{
+    margin: 5px;
+}
+.boton-talle{
+    border-radius: 30px;
+    padding: 5px;
+    background-color: #ffffff;
+}
+.cantidad1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cantidad-titulo{
+    color: #ffffff;
+}
+.cantidaditem{
+    margin: 5px;
+}
+.realizar-compra{
+    margin: 10px 5px;
+}
+.boton-de-compra{
+    font-size: 45px;
+    padding: 5px;
+    border-radius: 20px;
+    color: #ffffff;
+    background-color: #d97f11;
+    text-decoration: none;
+}
+.enviosgratis{
+    margin: 0px 10px;
+}
+.envios1{
+    background-color: #f2e4bb;
+    padding: 5px;
+    margin-top: 25px;
+    margin-left: 5px;
+}
+.header-details{
+    padding: 5px 5px;
+}
+.descripcion{
+    margin: 10px;
+    background-color: #ffffff;
+}
+.detallesLista1 li{
+    list-style: none;
+    margin: 10px;
+    padding: 5px 5px ;
+}
+.detallesLista2 li{
+    list-style: none;
+    margin: 10px;
+    padding: 5px 5px ;
+}
+.opciones{
+    padding: 5px 5px;
+}
+ol{
+    list-style: none;
+}
+
+/*MAIN REGISTER */
+
+.titulo-registro1{
+    text-align: center;
+    padding:10px;
+    
+}
+.register-form{
+    padding:10px;
+    border-top: solid 1px #222021;
+}
+.register-form hr{
+    width:90%;
+}
+.register-container label{
+    font-size:14px;
+}
+.register-container h3{
+margin: 15px 0px 10px 0px;
+}
+.register-container-end{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    align-content: center;
+}
+.register-container-end input{
+    width: 10%;
+    align-self: center;
+}
+.register-container-end label{
+    width: 90%;
+    padding-bottom: 10px;
+    align-self: center;
+    margin-top:10px;
+}
+.ingreso{
+    width: 90%;
+    font: roboto;
+    margin: 0px 0px 10px 0px;
+    padding: 5px;  
+}
+.genero{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+}
+.submit-button1{
+    margin-top: 10px;
+    width: 30%;
+    background-color: #222021;
+    border: none;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 5px;
+    margin:auto;
+}
 
 
 /*FOOTER */
@@ -390,7 +707,54 @@ div.italic {
         margin-top: 7px;
         padding-top: 15px;
     }
-    
+    .producto, .finalizar-compra, .medios{
+        width:100%;
+    }
+    .recomendados{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .a1, .a2 , .a3, .a4{
+        display: flex;
+        width: 45%;
+        justify-content: space-between;
+    }
+    .a1, .a2 , .a3, .a4 div{
+        text-align: center;
+    }
+    .main-title{
+        font-weight: bolder;
+        font-size: 200%;
+    }
+    .precio-pd{
+        font-size: 50px;
+        font-weight: bold;
+        text-align: center;
+    }
+    .talle{
+        font-size: 25px;
+        text-align: center;
+        margin: 10px;
+    }
+    .talle1{
+        font-size: 25px;
+        text-align: center;
+    }
+    .cantidad-titulo{
+        margin: 10px;
+    }
+    .cantidad1{
+        font-size: 25px;
+    }
+    .boton-de-compra{
+        margin: 10px;
+    }
+    .descripcion{
+        display: flex;
+    }
 }
 
 @media (min-width:768px){
@@ -480,6 +844,94 @@ div.italic {
         width: 100%;
         display: block;
     }
+    .login-bar{
+        text-align: center;
+        border: solid 1px #222021;
+        margin: 25px;
+    }
+    .login-bar1{
+        border: solid 1px #222021;
+        margin: 25px;
+    }
+    .titulo-registro{
+        border-bottom: solid 1px #222021;
+    }
+    .obligatorio{
+        text-align: justify;
+        padding-left: 33%;
+    }
+    .boton-login{
+        max-width: 400px;
+    }
+    .new-account{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .submit-button{
+        max-width: 300px;
+    }
+    .titulos{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top:15px;
+        margin-left:20px;
+    }
+    .titulo-producto-carrito{
+        flex-grow: 0.5;
+    }
+    .miniatura{
+        width: 15%;
+    }
+    div.modelo{
+        width: 42%;
+    }
+    div.precio-carrito{
+        width:10%;
+        font-size:14px;
+        align-self: center;
+    }
+    .form-cantidad{
+        align-self: center;
+        width:19%;
+        margin-right: 10px;
+    }
+    div.eliminar{
+        width:100%
+    }
+    .recomendados{
+        margin-left: 75px;
+        margin-right: 75px;
+    }
+    .main-article-product{
+        display: flex;
+    }
+    .imagen-principal{
+        width: 100%;
+    }
+    .main-product-image{
+        height: 100%;
+    }
+    .data-principal{
+        width: 40%;
+    }
+    .register-form{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-bottom:20px;
+    }
+    .register-form hr{
+        margin-top: 20px;
+    }
+    .register-container{
+        width: 45%;
+    }
+    .register-container-end{
+        width:50%;
+    }
+    
+
 }
 @media (min-width:1200px){
     .logo{
@@ -498,6 +950,11 @@ div.italic {
     .boton-suscribe{
         width: 25%;
     }
-    
-
+    .obligatorio{
+        padding-left: 38%;
+    }
+    .recomendados{
+        margin-left: 100px;
+        margin-right: 100px;
+    }  
 }
